kubernetes/apps/networking/traefik/app/dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik
  namespace: networking
spec:
  hostnames:
    - traefik.${PUBLIC_DOMAIN}
  parentRefs:
    - name: external
      namespace: networking
      sectionName: websecure
  rules:
    - backendRefs:
        - name: api@internal
          kind: TraefikService
          port: 8080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: traefik-middleware-tinyauth
      matches:
        - path:
            type: PathPrefix
            value: /
